# AI-coding-agent

./: README.md  USAGE.md  pyproject.toml  quicksort.py  smoke_test.py
agent/: core.py  event_log.py  langgraph_loop.py  orchestrator.py  prompt.py  task.py
config/: default.yaml  schema.py
context/: history.py  rag.py  repo_map.py  token_budget.py
docs/: langgraph_graph.dot  rag.md  visualize_langgraph.py
entry/: chat.py  cli.py  github_issue.py  web.py
eval/: __init__.py  harness.py  pricing.py  suite.py  verifiers.py
llm/: anthropic_backend.py  base.py  cache.py  compose.py  model_router.py  openai_compat.py  rate_limit.py  router.py
tests/: test_chat.py  test_confirm.py  test_day1.py  test_day2.py  test_day3.py  test_day4.py  test_day5.py  test_day6.py  test_day7.py  test_eval.py  test_langgraph.py  test_orchestrator.py  test_rag.py  test_rag_external.py  test_sandbox.py  test_stream.py  test_token_efficiency.py  test_web.py
tools/: base.py  file_tool.py  git_tool.py  runtime.py  search_tool.py  shell_tool.py  test_tool.py
